<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterBlue"
    android:gravity="top"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="@color/primary_color"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">


            <LinearLayout
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:src="@mipmap/app_icon"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="12dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="35dp"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        android:gravity="center"
        android:orientation="vertical">

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputHeight"
        android:background="@color/skyBlue"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:autofillHints="@string/name"/>

    <EditText
        android:id="@+id/surnameInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputHeight"
        android:background="@color/skyBlue"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/lastName"
        android:autofillHints="@string/lastName"/>

    <EditText
        android:id="@+id/mailInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputHeight"
        android:background="@color/skyBlue"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="@string/email"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputHeight"
        android:background="@color/skyBlue"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="@string/password"/>

    <EditText
        android:id="@+id/repasswordInput"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputHeight"
        android:background="@color/skyBlue"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/passwordRepeat"
        android:autofillHints="@string/passwordRepeat"/>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="250dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/filled_button"
            android:onClick="crearCuenta"
            android:radius="50dp"
            android:text="@string/join"
            android:textColor="@color/colorWhite"
            android:textSize="18dp" />

        <Button
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:onClick="cancelarRegistro"
            android:text="@string/cancel"
            android:textColor="@color/secondary_color" />
    </LinearLayout>

</LinearLayout>