<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@color/primary_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/primary_color">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="169dp"
            android:layout_height="169dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/app_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="100dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@color/app_light_blue"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_light_blue"
            android:padding="10dp"
            android:layout_marginVertical="5dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/logInBtn"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/filled_button"
            android:radius="50dp"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/transparent_button"
            android:text="@string/signup"
            android:textColor="@color/secondary_color" />
    </LinearLayout>

</LinearLayout>

